# frequency_scan_model

./: .gitignore  LICENSE  README.md  batch_mode.ipynb  env.yml  model.py  monoexponential-model-with-p.ipynb  monoexponential-model-with-tensorflow.ipynb  multiexponential-model.ipynb  phi_maximizer.html  phi_maximizer.ipynb  phi_maximizer_func.ipynb  pyproject.toml
dataset/: КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-10В-11В_10мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-10В-12В_20мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-11В-12В_20мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-10В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-11В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-12В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-3В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-4В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-5В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-6В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-7В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-8В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-1В-9В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-2В-10В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-2В-11В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-2В-12В_200мВ_20мкс_шаг_0,1.csv  КТ117№1_п1(база 2)_2500Гц-1Гц_1пФ_+10С_-2В-3В_50мВ_20мкс_шаг_0,1.csv  (+180 more)
(+178 files in other folders)
